[DND-30] Fix active control contrast (#109)

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -23,7 +23,33 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
-  color: inherit;
+@layer base {
+  a {
+    color: inherit;
+  }
+
+  button,
+  input:where([type="button"], [type="reset"], [type="submit"]) {
+    -webkit-appearance: none;
+    appearance: none;
+    color: inherit;
+    font: inherit;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  button:where(:not(:disabled)):active,
+  input:where(
+    [type="button"]:not(:disabled),
+    [type="reset"]:not(:disabled),
+    [type="submit"]:not(:disabled)
+  ):active {
+    filter: brightness(0.9);
+  }
+
+  button:focus-visible,
+  input:where([type="button"], [type="reset"], [type="submit"]):focus-visible {
+    outline: 2px solid #1f6f78;
+    outline-offset: 2px;
+  }
 }
 
